--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">2025_02_supvinci_parisb</string>
+    <string name="bt_loaddata">Load data</string>
+    <string name="clear_filter">Clear filter</string>
 </resources>
